added_more_stuff

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id="header">Endangered Species list</h1>
     <main id="main">
     Mass extintion events have repeatedly occurred in our planet since the begining of life. <br><br>
-    Counting 6 so far, Earths' "Hall of Exintion" DOMe has continuously been populated with thousands of now lost species. <br>
+    Counting 6 so far, Earths' "Hall of Exintion" DOMe has continuously been populated with thousands of lost species. <br>
 
     While we may not perceive many visible changes currently, it is already accepted by the scientific community <br>
     that we are at the midst of yet another Mass extintion event. This time caused by human action. <br>
@@ -26,17 +26,17 @@
 
     For more information on Mass Extintions on Earth click <a id="link" href="https://www.nationalgeographic.com/science/article/mass-extinction"> Here</a>.<p>
     </main>
-    <div id="form-container" >
+    <div>
         <h2 id="action-form"> Action Form: </h2>
 
-        <form id="form-flex">
-            <div id="text-input">
+        <form id="species_form">
+            <div>
                 <p>Species name:</p>
                 <input id="input" type="text" placeholder="Species Name"/>
-                <p id="input-result">No species have been added yet!</p>
+                <p id="input-result">No species added yet!</p>
             </div>
 
-            <div id="select-input">
+            <div>
             <label for="select"> Continent </label>
             <select id="select">
                 <option disabled selected>Where do they live?</option>
@@ -49,14 +49,15 @@
             <p id="select-result"> No location has been added yet!</p>
             </div>
 
-            <!-- <div id="button-input">
-            <button type="submit" id="submit_species" >Submit Animal</button>
-            </div>        -->
+            <button type="submit" id="submit_species" >Submit Species</button>      
         </form>
     </div>
     <div id="list">
-        <h3>Endangered animals list:</h3>
-        <ul>Amur Leopard - Asia</ul>
+        <h3>Most recent additions:</h3>
+        <ul>
+            <li>Amur Leopard</li>
+
+        </ul>
     </div>
     <footer id="footer">
         <p>savingtheworld.org</p>
