submit_button_makes_output_visual

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
             <p id="select-result"> No location has been added yet!</p>
             </div>
 
-            <button type="submit" id="submit_species" >Submit Species</button>      
+            <button type="submit" id="submit_species" value="submit_animal">Submit Species</button> 
         </form>
+        <p id="form-result">Who is going extinct?</p>
     </div>
     <div id="list">
         <h3>Most recent additions:</h3>
