button_adds_items_into_list_but_not_pretty

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <div id="list">
         <h3>Most recent additions:</h3>
-        <ul>
+        <ul id="list">
             <li>Amur Leopard</li>
 
         </ul>
