button_works_css_good

--- a/index.html
+++ b/index.html
@@ -43,21 +43,27 @@
                 <option value="Europe">Europe</option>
                 <option value="Asia">Asia</option>
                 <option value="Africa">Africa</option>
-                <option value="America">America</option>
+                <option value="America">Australia</option>
+                <option value="America">North America</option>
+                <option value="America">South America</option>
                 <option value="Antartica">Antartica</option>
             </select>
             <p id="select-result"> No location has been added yet!</p>
             </div>
-
+            <div id="button">
             <button type="submit" id="submit_species" value="submit_animal">Submit Species</button> 
+            </div>
         </form>
         <p id="form-result">Who is going extinct?</p>
     </div>
     <div id="list">
-        <h3>Most recent additions:</h3>
-        <ul id="list">
-            <li>Amur Leopard</li>
-
+        <h3>At serious risk <br>of extinction</h3>
+        <ul>
+            <li>Mountain Gorillas - Africa </li>
+            <li>Black Rhinos - Africa</li>
+            <li>Amur Leopard - Asia</li>
+            <li>Sumatran Orangutan - Asia </li>
+            <li>Hawksbill Turtles - Asia </li>
         </ul>
     </div>
     <footer id="footer">
@@ -65,5 +71,4 @@
     </footer>
     </body>
     </html>
-    
 
