--- a/index.html
+++ b/index.html
@@ -37,38 +37,44 @@
             </div>
 
             <div>
-            <label for="select"> Continent </label>
-            <select id="select">
-                <option disabled selected>Where do they live?</option>
-                <option value="Europe">Europe</option>
-                <option value="Asia">Asia</option>
-                <option value="Africa">Africa</option>
-                <option value="America">Australia</option>
-                <option value="America">North America</option>
-                <option value="America">South America</option>
-                <option value="Antartica">Antartica</option>
-            </select>
-            <p id="select-result"> No location has been added yet!</p>
+                <label for="select"> Continent </label>
+                <select id="select">
+                    <option disabled selected>Where do they live?</option>
+                    <option value="Europe">Europe</option>
+                    <option value="Asia">Asia</option>
+                    <option value="Africa">Africa</option>
+                    <option value="America">Australia</option>
+                    <option value="America">North America</option>
+                    <option value="America">South America</option>
+                    <option value="Antartica">Antartica</option>
+                </select>
+                <p id="select-result"> No location has been added yet!</p>
             </div>
+
             <div id="button">
-            <button type="submit" id="submit_species" value="submit_animal">Submit Species</button> 
+                <button type="submit" id="submit_species" value="submit_animal">Submit Species</button> 
             </div>
         </form>
         <p id="form-result">Who is going extinct?</p>
     </div>
+
     <div id="list">
-        <h3>At serious risk <br>of extinction</h3>
+        <h3>At risk <br>of extinction</h3>
+        <div id="button2">
+            <button type="submit" id="button_delete" value="submit_animal">Delete list</button> 
+        </div>
         <ul>
             <li>Mountain Gorillas - Africa </li>
             <li>Black Rhinos - Africa</li>
             <li>Amur Leopard - Asia</li>
             <li>Sumatran Orangutan - Asia </li>
-            <li>Hawksbill Turtles - Asia </li>
-        </ul>
+        </ul>    
     </div>
+
     <footer id="footer">
         <p>savingtheworld.org</p>
     </footer>
-    </body>
-    </html>
+</body>
+</html>
+
 
