correting_one_typo

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div id="list">
-        <h3>At risk <br>of extinction</h3>
+        <h3>At risk <br>of extinction:</h3>
         <div id="button2">
             <button type="submit" id="button_delete" value="submit_animal">Delete list</button> 
         </div>
