corrected a minimal bug

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                     <option value="Europe">Europe</option>
                     <option value="Asia">Asia</option>
                     <option value="Africa">Africa</option>
-                    <option value="America">Australia</option>
-                    <option value="America">North America</option>
-                    <option value="America">South America</option>
+                    <option value="Australia">Australia</option>
+                    <option value="North America">North America</option>
+                    <option value="South America">South America</option>
                     <option value="Antartica">Antartica</option>
                 </select>
                 <p id="select-result"> No location has been added yet!</p>
